<resources>
    <string name="app_name">Project</string>
    <string name="click_add_icon_to_add_a_person">Click Add Icon to add a Person</string>
    <string name="id">ID:</string>
    <string name="my_work_experience">My Work Experience:</string>
    <string name="chinese_hsk_level">Chinese HSK Level:</string>
    <string name="interests">Interests:</string>
    <string name="gender">Gender:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="todo">TODO</string>
    <string name="name">Name:</string>
    <string name="work_experience">Work Experience:</string>
    <string name="write_your_work_experience_hear">Write Your Work Experience Hear.............</string>
    <string name="save">Save</string>
    <string name="food">Food</string>
    <string name="travel">Travel</string>
    <string name="music">Music</string>
    <string name="reading">Reading</string>
</resources>