<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TableLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_weight="2"
            android:stretchColumns="1" >
            <TableRow>
                <TextView
                    android:id="@+id/id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="ID:"
                    android:textColor="#86069C"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/personId"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_weight="2"
                    android:textColor="#034E47"
                    android:textSize="20sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/name"
                    android:textColor="#86069C"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/PersonName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textColor="#034E47"
                    android:textSize="20sp" />
            </TableRow>
        </TableLayout>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:src="@drawable/avatar"
            android:contentDescription="@string/todo" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth"
            android:textColor="#86069C"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/personDOB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#034E47"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/gender"
            android:textColor="#86069C"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/personGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#034E47"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/interests"
            android:textColor="#86069C"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/personInterests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:textColor="#034E47"
            android:textSize="20sp" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chinese_hsk_level"
        android:textColor="#86069C"
        android:textSize="20sp" />
    <RatingBar
        android:id="@+id/personRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:backgroundTint="#09850E"
        android:outlineAmbientShadowColor="#00BCD4">
    </RatingBar>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/my_work_experience"
        android:textColor="#86069C"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/personWorkExperience"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="top"
        android:textColor="#034E47">
    </TextView>
</LinearLayout>